# cadq

./: .gitignore  DeveloperGuide.md  README.md  pyproject.toml
rules/: layers.default.yaml
scripts/: compute_garden.py  count_trees.py  inspect_drawing.py
skills/cadq/: SKILL.md
skills/cadq/references/: ontology.md  workflows.md
skills/cadq/scripts/: quickstart.ps1
src/cadq/: __init__.py  __main__.py  cli.py  config.py  ingest.py  mcp_server.py  ontology.py  queries.py  store.py
tests/: test_smoke.py
