[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cadq"
version = "0.1.0"
description = "Semantic query CLI + MCP server for DWG/DXF drawings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CAD_AI" }]
keywords = ["dwg", "dxf", "cad", "gis", "mcp", "ai", "copilot", "ezdxf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "ezdxf>=1.3",
    "duckdb>=1.0",
    "shapely>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
cadq = "cadq.cli:app"
cadq-mcp = "cadq.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cadq"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
